# BayesianStatistics

./: README.md  pyproject.toml
src/00_tutorial/: bernoulli  bernoulli.hpp  bernoulli.stan  tutorial.ipynb
src/01_simpleLinearReg/: data-salary.txt  simpleLR  simpleLR.hpp  simpleLR.ipynb  simpleLR.stan  simpleLR_ppc  simpleLR_ppc.hpp  simpleLR_ppc.stan
src/01_simpleLinearReg/output/: simpleLR-20221023211655_0-stdout.txt  simpleLR-20221023211655_1-stdout.txt  simpleLR-20221023211655_1.csv  simpleLR-20221023211655_2-stdout.txt  simpleLR-20221023211655_2.csv  simpleLR-20221023211655_3-stdout.txt  simpleLR-20221023211655_3.csv  simpleLR-20221023211655_4.csv  simpleLR-20221023213123_0-stdout.txt  simpleLR-20221023213123_1-stdout.txt  simpleLR-20221023213123_1.csv  simpleLR-20221023213123_2-stdout.txt  simpleLR-20221023213123_2.csv  simpleLR-20221023213123_3-stdout.txt  simpleLR-20221023213123_3.csv  simpleLR-20221023213123_4.csv  simpleLR-20221023224141_0-stdout.txt  simpleLR-20221023224141_1-stdout.txt  simpleLR-20221023224141_1.csv  simpleLR-20221023224141_2-stdout.txt  simpleLR-20221023224141_2.csv  simpleLR-20221023224141_3-stdout.txt  simpleLR-20221023224141_3.csv  simpleLR-20221023224141_4.csv
