[tool.poetry]
name = "bayesianstatistics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cmdstanpy = {extras = ["all"], version = "^1.0.7"}
xarray = "^2022.10.0"
pandas = "^1.5.1"
numpy = "^1.23.4"
arviz = "^0.12.1"
jupyter = "^1.0.0"
matplotlib = "^3.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
